# marr

./: CMakeLists.txt  README.md
include/marr/: autograd.hpp  broadcast.hpp  expr.hpp  factory.hpp  indexing.hpp  linalg.hpp  ops.hpp  parallel.hpp  print.hpp  shape.hpp  tensor.hpp  tensor_core.hpp
include/marr/detail/: parallel_for.hpp  thread_pool.hpp
nanovit/: README.md
nanovit/nanovit/: attention.py  layers.py
src/: tensor.cpp
tests/: tensor_test.cpp
tinyViTCpp/: .gitignore  CMakeLists.txt  README.md
tinyViTCpp/examples/: train_tinyvit_hier.cpp
tinyViTCpp/include/: tinyvit_hier.hpp
tinyViTCpp/tinyvit/: tinyvit_hier.hpp
vision/: CMakeLists.txt  README.md
vision/examples/: mnist_dataset.cpp  python_mnist_dataset.py
vision/include/marrvision/: datasets.hpp
vision/include/marrvision/datasets/: mnist.hpp
vision/include/marrvision/transforms/v2/: color.hpp  functional.hpp  geometry.hpp  temporal.hpp
vision/marrvision/: utils.py
vision/marrvision/datasets/: __init__.py  mnist.py  vision.py
vision/marrvision/transforms/v2/: README.md
vision/marrvision/transforms/v2/examples/: basic_pipeline.cpp
vision/marrvision/transforms/v2/include/marrvision/transforms/: v2.hpp
vision/marrvision/transforms/v2/include/marrvision/transforms/v2/: augment.hpp  auto_augment.hpp  container.hpp  meta.hpp  misc.hpp  transform.hpp  type_conversion.hpp  types.hpp  utils.hpp
vision/tests/: mnist.cpp  smoke.cpp  test_python_mnist.py
